tests/unit-fail-compilation/j027b.ref
j027b.c:2:2: error: missing terminating " character
  "x
  ^
j027b.c:3:2: error: missing terminating " character
  ";
  ^
Translation failed (config dumped). Run kcc -d j027b.c to see commands run.
